--- a/app/src/main/res/layout/main_drawer.xml
+++ b/app/src/main/res/layout/main_drawer.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:ignore="SpUsage,ContentDescription"
     android:id="@+id/left_drawer"
@@ -11,7 +11,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <ImageView
@@ -22,7 +22,8 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="44.67dp"
+            android:layout_height="0dp"
+            android:layout_weight="44"
             android:layout_marginLeft="20dp"
             android:layout_marginStart="20dp"
             android:paddingTop="16dp"
@@ -35,9 +36,11 @@
         <TextView
             android:id="@+id/tv_drawer_app_locker"
             android:layout_width="match_parent"
-            android:layout_height="34dp"
+            android:layout_height="0dp"
+            android:layout_weight="46"
             android:layout_marginLeft="18dp"
-            android:layout_marginStart="18dp"
+            android:layout_marginRight="18dp"
+            android:paddingBottom="12dp"
             android:gravity="center_vertical"
             android:drawableLeft="@drawable/ic_drawer_app_locker"
             android:drawableStart="@drawable/ic_drawer_app_locker"
@@ -50,9 +53,11 @@
         <TextView
             android:id="@+id/tv_drawer_smart_charge"
             android:layout_width="match_parent"
-            android:layout_height="34dp"
+            android:layout_height="0dp"
+            android:layout_weight="46"
             android:layout_marginLeft="18dp"
             android:layout_marginRight="18dp"
+            android:paddingBottom="12dp"
             android:gravity="center_vertical"
             android:drawableLeft="@drawable/ic_drawer_smart_charge"
             android:drawableStart="@drawable/ic_drawer_smart_charge"
@@ -70,7 +75,8 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="44.67dp"
+            android:layout_height="0dp"
+            android:layout_weight="44"
             android:layout_marginLeft="20dp"
             android:layout_marginStart="20dp"
             android:paddingTop="16dp"
@@ -83,9 +89,11 @@
         <TextView
             android:id="@+id/tv_drawer_usb_plugin"
             android:layout_width="match_parent"
-            android:layout_height="38dp"
+            android:layout_height="0dp"
+            android:layout_weight="50"
             android:layout_marginLeft="18dp"
             android:layout_marginRight="18dp"
+            android:paddingBottom="12dp"
             android:gravity="center_vertical"
             android:drawableLeft="@drawable/ic_drawer_usb"
             android:drawableStart="@drawable/ic_drawer_usb"
@@ -100,9 +108,11 @@
         <TextView
             android:id="@+id/tv_drawer_low_space"
             android:layout_width="match_parent"
-            android:layout_height="38dp"
+            android:layout_height="0dp"
+            android:layout_weight="50"
             android:layout_marginLeft="18dp"
             android:layout_marginRight="18dp"
+            android:paddingBottom="12dp"
             android:gravity="center_vertical"
             android:drawableLeft="@drawable/ic_drawer_low_space"
             android:drawableStart="@drawable/ic_drawer_low_space"
@@ -118,9 +128,11 @@
         <TextView
             android:id="@+id/tv_drawer_logger_notification"
             android:layout_width="match_parent"
-            android:layout_height="38dp"
+            android:layout_height="0dp"
+            android:layout_weight="50"
             android:layout_marginLeft="18dp"
             android:layout_marginRight="18dp"
+            android:paddingBottom="12dp"
             android:gravity="center_vertical"
             android:drawableLeft="@drawable/ic_drawer_logger"
             android:drawableStart="@drawable/ic_drawer_logger"
@@ -139,7 +151,8 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="43dp"
+            android:layout_height="0dp"
+            android:layout_weight="43"
             android:layout_marginLeft="20dp"
             android:layout_marginStart="20dp"
             android:paddingTop="16dp"
@@ -152,9 +165,11 @@
         <TextView
             android:id="@+id/tv_drawer_rating"
             android:layout_width="match_parent"
-            android:layout_height="38dp"
+            android:layout_height="0dp"
+            android:layout_weight="50"
             android:layout_marginLeft="18dp"
-            android:layout_marginStart="18dp"
+            android:layout_marginRight="18dp"
+            android:paddingBottom="12dp"
             android:gravity="center_vertical"
             android:drawableLeft="@drawable/ic_drawer_rating"
             android:drawableStart="@drawable/ic_drawer_rating"
@@ -167,9 +182,11 @@
         <TextView
             android:id="@+id/tv_drawer_update"
             android:layout_width="match_parent"
-            android:layout_height="38dp"
+            android:layout_height="0dp"
+            android:layout_weight="50"
             android:layout_marginLeft="18dp"
-            android:layout_marginStart="18dp"
+            android:layout_marginRight="18dp"
+            android:paddingBottom="12dp"
             android:gravity="center_vertical"
             android:drawableLeft="@drawable/ic_drawer_update"
             android:drawableStart="@drawable/ic_drawer_update"
@@ -183,9 +200,11 @@
         <TextView
             android:id="@+id/tv_drawer_help"
             android:layout_width="match_parent"
-            android:layout_height="38dp"
+            android:layout_height="0dp"
+            android:layout_weight="50"
             android:layout_marginLeft="18dp"
-            android:layout_marginStart="18dp"
+            android:layout_marginRight="18dp"
+            android:paddingBottom="12dp"
             android:gravity="center_vertical"
             android:drawableLeft="@drawable/ic_drawer_help"
             android:drawableStart="@drawable/ic_drawer_help"
@@ -198,9 +217,11 @@
         <TextView
             android:id="@+id/tv_drawer_about"
             android:layout_width="match_parent"
-            android:layout_height="38dp"
+            android:layout_height="0dp"
+            android:layout_weight="50"
             android:layout_marginLeft="18dp"
-            android:layout_marginStart="18dp"
+            android:layout_marginRight="18dp"
+            android:paddingBottom="12dp"
             android:gravity="center_vertical"
             android:drawableLeft="@drawable/ic_drawer_about"
             android:drawableStart="@drawable/ic_drawer_about"
@@ -212,4 +233,4 @@
 
     </LinearLayout>
 
-</ScrollView>
+</FrameLayout>
