--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -87,8 +87,8 @@
 
     <!-- Bottom oper
 ate bar -->
-    <color name="bottom_bar_item_pressed_color">#363636</color>
-    <color name="bottom_bar_item_normal_color">#404040</color>
+    <color name="bottom_bar_item_pressed_color">#1D1D1D</color>
+    <color name="bottom_bar_item_normal_color">#3B3B3B</color>
     <color name="light_gray">#4c4c4c</color>
     <color name="light_gray1">#d4d4d6</color>
 
