--- a/app/src/main/res/layout/activity_doc_manager.xml
+++ b/app/src/main/res/layout/activity_doc_manager.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -10,7 +10,13 @@
     android:background="@color/list_divider_line_color_f5f6ff"
     tools:context="com.jb.filemanager.function.docmanager.DocManagerActivity">
 
-    <include layout="@layout/app_manager_title_with_search"/>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+        <include layout="@layout/app_manager_title_with_search"/>
 
     <com.jb.filemanager.ui.widget.FloatingGroupExpandableListView
         android:id="@+id/elv_apk"
@@ -18,6 +24,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:divider="@null"
+        android:visibility="visible"
         android:groupIndicator="@null"
         android:listSelector="@android:color/transparent"
         android:scrollbars="none"/>
@@ -28,4 +35,15 @@
         android:id="@+id/bob_bottom_operator"
         android:layout_width="match_parent"
         android:layout_height="60dp"/>
-</LinearLayout>
+    </LinearLayout>
+
+    <com.jb.filemanager.commomview.ProgressWheel
+        android:id="@+id/pw_doc_progress"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        app:matProg_barColor="#0084ff"
+        app:matProg_barWidth="5dp"
+        app:matProg_progressIndeterminate="true"/>
+</RelativeLayout>
