--- a/app/src/main/res/layout/activity_doc_manager.xml
+++ b/app/src/main/res/layout/activity_doc_manager.xml
@@ -37,13 +37,9 @@
         android:layout_height="60dp"/>
     </LinearLayout>
 
-    <com.jb.filemanager.commomview.ProgressWheel
-        android:id="@+id/pw_doc_progress"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        app:matProg_barColor="#0084ff"
-        app:matProg_barWidth="5dp"
-        app:matProg_progressIndeterminate="true"/>
+    <com.jb.filemanager.ui.widget.CommonLoadingView
+        android:id="@+id/clv_doc_progress"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/common_title_bar_exclude_shadow_height"/>
 </RelativeLayout>
