--- a/app/src/main/res/layout/activity_same_file.xml
+++ b/app/src/main/res/layout/activity_same_file.xml
@@ -75,14 +75,11 @@
                 android:textColor="@color/light_gray1"
                 android:text="@string/no_file_hint"/>
         </LinearLayout>
-        <com.jb.filemanager.commomview.ProgressWheel
-            android:id="@+id/recent_progress"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            app:matProg_barColor="#0084ff"
-            app:matProg_barWidth="5dp"
-            app:matProg_progressIndeterminate="true"/>
+        <com.jb.filemanager.ui.widget.CommonLoadingView
+            android:id="@+id/mlv_image_loading"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/common_title_bar_exclude_shadow_height"/>
     </FrameLayout>
 
 
